# multiutil

./: Cargo.toml  README.md
src/: base_encoded.rs  base_encoder.rs  base_name.rs  base_util.rs  codec_info.rs  default_encoding.rs  encoding_info.rs  error.rs  lib.rs  tagged.rs  varbytes.rs  varuint.rs
src/serde/: de.rs  mod.rs  ser.rs
