[package]
name = "multiutil"
version = "0.1.3"
edition = "2021"
authors = ["Dave Huseby <dwh@linuxprogrammer.org>"]
description = "Multiformat traits and utility functions"
repository = "https://github.com/cryptidtech/multiutil.git"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
thiserror = "1.0"
unsigned-varint = { version = "0.8", features = ["std"] }
